# linux-incident-compiler

./: .gitignore  Cargo.toml  README.md  SHIP_CHECKLIST.md
.github/workflows/: ci.yml  release.yml
crates/agent-linux/: Cargo.toml
crates/agent-linux/src/: capture.rs  capture_linux_rotating.rs  event_builders.rs  host.rs  lib.rs  main.rs  mod.rs
crates/agent-linux/src/ebpf/: ..module-common.o.cmd  .Module.symvers.cmd  .lkm.ko.cmd  .lkm.mod.o.cmd  .lkm.o.cmd  Makefile  bpf_helpers.h  config.rs  container_exec.bpf.c  cred_access.bpf.c  dns_telemetry.bpf.c  ebpf_bridge.rs  edr_bpf_attach_one.sh  edr_events.h  encrypted_payload_monitor.bpf.c  es_monitor.swift  exec_provenance.bpf.c  file_ops_guard.bpf.c  fixtures.rs  ingest.rs  kernel_module_load.bpf.c  metrics.rs  mock_stream.rs  mod.rs  net_flow.bpf.c  privilege_transitions.bpf.c  proc_lifecycle.bpf.c  ptrace_injection.bpf.c  reader.rs  ringbuf_reader.rs  signal_integrity.bpf.c  suspicious_ipc.bpf.c  syscall_tracer.bpf.c  tcp_connect.bpf.c  tests.rs  transport.rs  usb_monitor.bpf.c  wx_exec.bpf.c
crates/agent-linux/src/ebpf/include/: vmlinux.h
crates/agent-linux/src/sensors/: mod.rs
crates/agent-linux/src/sensors/ebpf_primitives/: archive_tool_exec.rs  auth_event.rs  composite_detectors.rs  cred_access.rs  defense_evasion.rs  discovery_exec.rs  mod.rs  net_connect.rs  persistence_change.rs  process_injection.rs  script_exec.rs  staging_write.rs
crates/agent-linux/src/sensors_v2/: alert_engine.rs  attack_surface.rs  auth_monitor.rs  auth_pipe_listener.rs  c2_detection.rs  cloud_tracker.rs  common.rs  config.rs  container_monitor.rs  defense_evasion.rs  dll_injection_monitor.rs  encrypted_payload_detector.rs  entropy_exec_monitor.rs  file_hash_watcher.rs  file_tamper_monitor.rs  geo_ip_anomaly.rs  job_sched_monitor.rs  lateral_movement.rs  lkm_monitor.rs  logon_tracker.rs  mem_scan.rs  metrics.rs  mfa_bypass.rs  mod.rs  net_watch.rs  noise_policy.rs  password_spray.rs  persistence_watch.rs  privilege_monitor.rs  process_injection.rs  process_monitor.rs  procfs_process.rs  replay_writer.rs  script_monitor.rs  semantic_audit.rs  signal_integrity_mapper.rs  suspicious_ipc.rs  telemetry_fingerprint.rs  trust_state_restorer.rs  usb_monitor.rs  (+1 more)
crates/locald/: Cargo.toml
crates/server/: Cargo.toml
docs/: EBPF.md  INSTALL_LINUX.md  LOAD_GATE_REPORT.md  LOAD_METRICS.md  SMOKE_DISTROS.md  SMOKE_TAURI_LINUX.md  TELEMETRY_ENABLEMENT_LINUX.md  facts_linux.md  playbooks_linux_coverage.md
packaging/: allowlist.json
packaging/deb/: Cargo-deb-reference.toml  build-deb.sh
packaging/debian/: postinst  postrm  prerm
packaging/rpm/: build-rpm.sh  linux-incident-compiler.spec
playbooks/linux/: demo_proc_write.yaml  pb_Compress_exfil.yaml  pb_cloud_cli_exfil_linux_aws_rclone.yaml  pb_container_breakout_precursors_linux.yaml  pb_crypto_miner_linux_pool_cpu_gpu  pb_encryptor_linux_memfd_rwx_lowrename.yaml  pb_exfil_linux_staging_tmpfs_ssh  (+25 more)
scripts/: check_load_gate.sh  ebpf-preflight.sh  enable_linux_telemetry.sh  install_systemd.sh  load_harness_linux.sh  run_stack_linux.sh  smoke-tauri.sh  uninstall_systemd.sh
src-tauri/: Cargo.toml
systemd/: edr-capture-caps.service  edr-capture.service  edr-locald.service  edr-server.service  edr.target
(+22 files in other folders)
