[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/workbench",
    "crates/server",
    "crates/locald",
    "crates/agent-linux",
]

# Default members to build (excludes platform-specific agents)
default-members = [
    "crates/core",
    "crates/workbench",
    "crates/server",
    "crates/locald",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jbaker07/linux-incident-compiler"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
ed25519-dalek = "2"
rand = "0.8"
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
