[package]
name = "agent-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "capture_linux_rotating"
path = "src/bin/capture_linux_rotating.rs"

[dependencies]
edr-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = { version = "0.22", optional = true }
libc = "0.2"
nix = { version = "0.27", features = ["user", "process", "signal"] }
procfs = "0.16"

[features]
default = []
ebpf = ["libbpf-rs"]
